<resources>
    <string name="app_name">Anjo: Consultas Médicas</string>
    <string name="title_activity_login">Login</string>
    <string name="GoogleSignIn">Entrar com o Google</string>
    <string name="FacebookSignIn">Entrar com o Facebook</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="Terms">By Signing up you agree to Anjo</string>
    <string name="btnTerms"><![CDATA[Terms of Use & Privacy Policy]]></string>
    <string name="hello_blank_fragment">Hello world</string>
    <string name="cep">CEP</string>
    <string name="endereco">Endereço</string>
    <string name="convenio">Convênio (Opcional)</string>
    <string name="completar_cadastro">Completar cadastro</string>
    <string name="convenio_numero">Convênio número (Opcional)</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="exemploNascimento">19/05/1992</string>
    <string name="altura">Altura (em cm)</string>
    <string name="cpf">CPF</string>
    <string name="exemploCPF">403.600.504–00</string>
    <string name="exemploCEP">12236–000</string>
    <string name="exemploEndereco">Rua, Bairro, Cidade, Estado</string>
    <string name="exemploConvenio">Nome do convênio</string>
    <string name="exemploConvNum">0 000 000000000000 9</string>
    <string name="sexo">Sexo</string>
    <string name="info1Cadastro">Para concluir o cadastro, preencha os campos a seguir</string>
    <string name="info2Cadastro">Falta pouco, só mais algumas informações</string>

    <string name="title_activity_fail">failActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
    <string name="perto_do_trabalho">Perto do trabalho</string>
    <string name="cadastrar_endereco">Cadastrar endereço</string>
    <string name="adicionar_outro_endereco">+ Adicionar outro endereço</string>
    <string name="perto_de_casa">Perto de casa</string>
    <string name="perto_de_mim">Perto de mim</string>
    <string name="ative_sua_localizaco">Ative sua localização</string>
    <string name="por_onde_voc_quer_procurar_nossos_anjos">Por onde você quer procurar nossos anjos?</string>
    <string name="localizaco">Localização</string>
    <string name="feminino">Feminino</string>
    <string name="outros">Outros</string>
    <string name="masculino">Masculino</string>
    <string name="drop_down_icon">Drop down icon</string>
    <string name="pedro_a_werkhaizer">Pedro A. Werkhaizer</string>
    <string name="nome">Nome</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="nome_exemplo">Ex.: João da Silva</string>
    <string name="voltarInicio">voltar para o início</string>
    <string name="consultaMarcada">Sua consulta está marcada ;)</string>
    <string name="nao_esqueca">Não esqueça:</string>
    <string name="consultas">Consultas</string>
    <string name="marcar_consulta">marcar consulta</string>
    <string name="comentarios_fixados">Comentários fixados</string>
    <string name="avaliacao">Avaliação</string>
    <string name="distancia">Distância</string>
    <string name="convenios">Convênios</string>
    <string name="qual_seu_convenio">qual seu convênio?</string>
    <string name="n_to_achando_meu_convenio">n to achando meu convênio</string>
    <string name="esse_ai_mesmo">é esse aí mesmo!</string>
    <string name="ex_convenio">Ex.: Unimed-RJ</string>
    <string name="digite_o_cep_para_continuar">digite o cep para continuar</string>
    <string name="ex_cep">Ex.: 12262-000</string>
    <string name="nao_sabe_o_cep">não sabe o cep?</string>
    <string name="buscar">buscar</string>
    <string name="digite_aqui">Digite aqui...</string>
    <string name="qual_o_numero_do_seu_convenio">qual o numero do seu convênio?</string>
    <string name="ex_num_convenio">Ex.: 0 000 000 000 00</string>
    <string name="onde_eu_vejo_isso">onde eu vejo isso?</string>
    <string name="pronto">pronto!</string>
    <string name="completar_endereco">Completar endereço</string>
    <string name="como_voce_quer_salvar_esse_endereco">Como você quer salvar esse endereço?</string>
    <string name="ex_nome_end">Ex.: Trabalho</string>
    <string name="ex_estado">Ex.: SP</string>
    <string name="ex_cidade">Ex.: São Paulo</string>
    <string name="ex_rua">Ex.: Rua Nove</string>
    <string name="ex_bairro">Ex.: Vila Liberdade</string>
    <string name="salvar">salvar</string>
    <string name="algo_a_acrescentar">Algo a acrescentar? (Opcional)</string>
    <string name="confirmar_horario">Confirmar horário</string>
    <string name="msgDeletada">mensagem deletada</string>
    <string name="vcApagouMsg">você apagou essa mensagem</string>
</resources>
