<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".completarCadastroActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/completar_cadastro"
        android:visibility="gone"
        style="@style/H2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnDoneCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        style="@style/doneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInfoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            style="@style/H1"
            android:text="@string/info1Cadastro" />

        <LinearLayout
            android:id="@+id/llInfoAdicionais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/convenio" />

            <EditText
                android:id="@+id/editConvenio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/exemploConvenio"
                android:inputType="text|textCapSentences|textAutoCorrect"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/convenio_numero" />

            <EditText
                android:id="@+id/editConvenioNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/exemploConvNum"
                android:inputType="number"
                tools:targetApi="o" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="16dp">
                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:layout_weight="1"
                        android:text="@string/estado" />

                    <EditText
                        android:id="@+id/editUF"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:hint="SP"
                        android:inputType="textCapCharacters"
                        android:textColor="@color/materialGray900"
                        tools:targetApi="o" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/cidade" />

                    <EditText
                        android:id="@+id/editCidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:hint="São Paulo"
                        android:inputType="textCapSentences"
                        tools:targetApi="o" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/rua" />

            <EditText
                android:id="@+id/editRua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="Rua 9"
                android:inputType="textCapSentences"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/bairro" />

            <EditText
                android:id="@+id/editBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="Vila Maria"
                android:inputType="textCapSentences"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDadosPessoais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtInfoCadastro"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/nome"
                android:textColor="@color/materialGray800"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/nome_exemplo"
                android:inputType="textCapWords"
                android:textColor="@color/materialGray900"
                android:textSize="14sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/cep"
                android:textColor="@color/materialGray800"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editCEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/exemploCEP"
                android:inputType="number"
                android:textSize="14sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/cpf"
                android:textColor="@color/materialGray800"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/editCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/exemploCPF"
                android:inputType="number"
                android:textColor="@color/materialGray900"
                android:textSize="14sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/data_de_nascimento"
                android:textColor="@color/materialGray800"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editNasicmento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/exemploNascimento"
                android:inputType="number"
                android:textColor="@color/materialGray900"
                android:textSize="14sp"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/sexo"
                android:textColor="@color/materialGray800"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/masculino"
                    android:textColor="@color/materialGray800"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/feminino"
                    android:textColor="@color/materialGray800"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/outros"
                    android:textColor="@color/materialGray800"
                    android:textSize="14sp" />
            </RadioGroup>


        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>